	+ Selectable custom fields to be visible/hidden in tables view and updated device/VLAN view;
	+ Added additional confirmation before section, subnet, folder and IP address deletion;
	+ New script added for cron checks that discovers new hosts for selected networks;
	+ Added inactivity timeout to settings;
	+ Changed install procedure and updated install scripts;

	Security Fixes:
	----------------------------
	+ Fixed known command injection vulnerabilities in the scan functions;
	+ Fixed known SQL injection vulnerabilities;
	+ Fixed known XSS vulnerabilities;
	+ Fixed known action XSS events;
	+ Moved to crypt method for storing password in database with salting;
	+ Added option to force user to change pass after first login;
	+ Admin password must be changed after installation;
	+ Added auth block for 5 minutes after 5x unsuccesfull login to prevent brute-force attacks

	Translations:
	----------------------------
	+ Added es_ES translation;

	Bugfixes:
	----------------------------
	+ Fixed top 10 widgets not escaping strings;
	+ Fixed section parent can be set to self that caused section to disapear;
	+ Fixed username instead of password being sent to smtp server;
	+ Fixed IE search bug with workaround;
	+ Fixed subnet and bcast not showing on strict mode disabled;
	+ Fixed top subnets missing on dashboard for non-admin users;
	+ Fixed bug when installation was silently failing bacause pf missing _() function (missing gettext extension)
	+ Fixed device custom field not populated on adding device;
	+ Fixed XLS export silently failed when description longer than 31 characters;
	+ Fixed overlapping check not working;
	+ Fixed subnet free space calcultation;
	+ Fixed visual subnet display not showing on /31 and /32 networks;
	+ Fixed custom fields display on folder edit;
	+ Fixed unable to edit IP addresses when fields are sorted;
	+ Fixde ordering of custom fields defaults to varchar 256;

== 1.0
	
	New features:
	----------------------------